Fill out quiz and grading

--- a/quiz.html
+++ b/quiz.html
@@ -7,10 +7,56 @@
 
 	<body>
 		<form action="quiz.php" method="post">
-			Test: <input type="radio" name="q1" value="yes">
-					<label for="yes">Yes</label><br>
-					<input type="radio" name="q1" value="no">
-					<label for="no">No</label><br>
+			1. What letter comes after q?<br>
+				<input type="radio" name="q1" value="z">
+				<label for="z">z</label><br>
+				<input type="radio" name="q1" value="r">
+				<label for="r">r</label><br>
+				<input type="radio" name="q1" value="arr">
+				<label for="arr">arr</label><br>
+				<input type="radio" name="q1" value="ah">
+				<label for="ah">ah</label><br>
+			<br>
+			2. In what year did the Defenestrations of Prague occur?<br>
+				<input type="radio" name="q2" value="1437">
+				<label for="1437">1437</label><br>
+				<input type="radio" name="q2" value="453">
+				<label for="453">453 B.C.</label><br>
+				<input type="radio" name="q2" value="1618">
+				<label for="1618">1618</label><br>
+				<input type="radio" name="q2" value="1876">
+				<label for="1876">1876</label><br>
+			<br>
+			3. What is heavier, one ton of feathers or one ton of lead?<br>
+				<input type="radio" name="q3" value="lead">
+				<label for="lead">The lead is heavier.</label><br>
+				<input type="radio" name="q3" value="feathers">
+				<label for="feathers">The feathers are heavier.</label><br>
+				<input type="radio" name="q3" value="same">
+				<label for="same">They weigh the same.</label><br>
+				<input type="radio" name="q3" value="emotions">
+				<label for="emotions">The feathers, because of the emotional weight of plucking all those birds.</label><br>
+			<br>
+			4. What is the general chemical formula for the mineral Turquoise?<br>
+				<input type="radio" name="q4" value="Cu">
+				<label for="Cu">Cu(Al,Fe<sup>3+</sup>)<sub>6</sub>[(OH)<sub>4</sub>|(PO)<sub>2</sub>]<sub>2</sub>&middot;4H<sub>2</sub>O</label><br>
+				<input type="radio" name="q4" value="Ba">
+				<label for="Ba">BaTi[Si<sub>3</sub>O<sub>9</sub>]</label><br>
+				<input type="radio" name="q4" value="Sn">
+				<label for="Sn">SnO<sub>2</sub></label><br>
+				<input type="radio" name="q4" value="Ca">
+				<label for="Ca">Ca<sub>2</sub>(Fe<sup>3+</sup>,Al)Al<sub>2</sub>[O|OH|SiO<sub>4</sub>|Si<sub>2</sub>O<sub>7</sub>]</label><br>
+			<br>
+			5. What is 2+2?<br>
+				<input type="radio" name="q5" value="22">
+				<label for="22">22</label><br>
+				<input type="radio" name="q5" value="5">
+				<label for="5">5. Big Brother loves me.</label><br>
+				<input type="radio" name="q5" value="4">
+				<label for="4">4</label><br>
+				<input type="radio" name="q5" value="0">
+				<label for="0">0</label><br>
+			<br>
 			<input type="submit">
 		</form>
 	</body>
